left aligned title nit fix

--- a/src/common.scss
+++ b/src/common.scss
@@ -35,7 +35,6 @@ $fdd-outer-padding-small-screen: 5%;
   line-height: 1em;
   width: 50%;
   float: right;
-  padding-right: $fdd-outer-padding-wide-screen;
 }
 
 @mixin title__centered {
